--- a/styles.css
+++ b/styles.css
@@ -176,7 +176,6 @@ a img:hover {
     nav ul {
         list-style: none;
         margin-top: 10px;
-        padding-left: 5px;
         overflow: hidden;
 
     }
@@ -204,7 +203,36 @@ a img:hover {
         text-align: left;
         position: relative;
     }
-    .st li {
-        width: 50%;
+    #ob {
+        width: 100%;
+        height: 600px;
+      
+    }
+    
+    #ob1 {
+  width: 100%;
+  height: 600px;
+    position: absolute;
+        top:804px;
+    }
+    #ob1 img {
+        border-radius: 0;
+    }
+
+    #ob2 {
+        height: 750px;
+        position: absolute;
+        top:55px;
+        background: linear-gradient(to bottom, white, rgb(135, 255, 147), rgb(0, 250, 88));
+        width: 100%;
+        border-radius: 0;
+    }
+    
+    
+    #obj {
+        width: 100%;
+        padding: 0;
+        margin: 0;
+    
     }
 }
