--- a/styles.css
+++ b/styles.css
@@ -19,12 +19,14 @@ nav {
     height: 100vh;
     background-color: goldenrod;
     border-right: 3px solid rgb(36, 34, 34);
+    text-align: center;
+    padding-top: 50px;
 
 }
 
 nav img {
-    width: 100%;
-    height: 50%;
+    width: 80%;
+    height: 40%;
     border-radius: 100%;
 
 }
