--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ nav img {
 nav ul {
     list-style: none;
     margin-top: 10px;
+    padding-left: 0;
     width: 100%;
     height: 50%;
     overflow: hidden;
