--- a/styles.css
+++ b/styles.css
@@ -57,13 +57,16 @@ aside {
     float: right;
     width: 75%;
     text-align: left;
-    position: relative;
+    background-color: blue;
+    height: 200%;
+    margin-left: 0;
 }
 
 section {
-    margin-left: 10%;
+    margin-left: 5%;
     position: absolute;
     top: 70px;
+    width: 70%;
 }
 
 h1 {
@@ -95,13 +98,16 @@ a img:hover {
 }
 
 #ob {
-    width: 200%;
-    height: 600px;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 #ob1 {
     float: right;
-    width: 40%;
+    width: 50%;
+    height: 200%;
+    height: 600px;
 }
 
 #ob1 img {
@@ -112,14 +118,14 @@ a img:hover {
 #ob2 {
     float: left;
     background: linear-gradient(to right, white, rgb(135, 255, 147), rgb(0, 250, 88));
-    width: 60%;
-    height: 200%;
+    width: 50%;
+    height: 600px;
     border-radius: 5% 0% 0% 5%;
 }
 
 
 #obj {
-    width: 60%;
+    width: 70%;
 
 }
 
